pod-def-resource-limite.yaml
apiVersion: v1
kind: Pod
metadata:
  name: elephant
spec:
  containers:
    - name: elephant
      image: polinux/stress
      resources:
        limits:
          memory: 20Mi
        requests:
          memory: 5Mi
