pod-def-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp
spec:
  containers:
    - name: log
      image: kodekloud/event-simulator
      volumeMounts:
        - mountPath: /log
          name: log-volume
  volumes:
    - name: log-volume
      hostPath:
        # directory location on host
        path: /var/log/webapp
        # this field is optional
        type: Directory
