simple-webapp-2-def.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-webapp-2
  labels:
    name: simple-webapp
spec:
  containers:
    - name: simple-webapp-2
      image: kodekloud/webapp-delayed-start
      livenessProbe:
        httpGet:
          path: /live
          port: 8080
        initialDelaySeconds: 80
        periodSeconds: 1
