Ingress-service-def.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress
spec:
  selector:
    name: nginx-ingress
  type: NodePort
  ports:
    - targetPort: 80
      port: 80
      nodePort: 30080
