webservice-def.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  selector:
    app: simple-webapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 30080
